--- a/i3status.conf
+++ b/i3status.conf
@@ -17,6 +17,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
 order += "load"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
@@ -40,6 +41,14 @@ tztime local {
 
 load {
         format = "%1min"
+}
+
+volume master {
+	format = "V: %volume"
+	format_muted = "V: M"
+	device = "default"
+	mixer = "Master"
+	mixer_idx = 0
 }
 
 disk "/" {
