--- a/i3status.conf
+++ b/i3status.conf
@@ -9,14 +9,15 @@
 general {
         colors = true
         interval = 5
+	output_format = "i3bar"
 }
 
 #order += "ipv6"
 order += "disk /"
 order += "wireless _first_"
-order += "ethernet _first_"
+#order += "ethernet _first_"
 order += "battery all"
-order += "load"
+#order += "load"
 order += "volume master"
 order += "tztime local"
 
@@ -32,7 +33,7 @@ ethernet _first_ {
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+        format = "%status %percentage"
 }
 
 tztime local {
