--- a/i3status.conf
+++ b/i3status.conf
@@ -22,8 +22,8 @@ order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: %ip"
-        format_down = "W: down"
+        format_up = " %ip"
+        format_down = " down"
 }
 
 ethernet _first_ {
@@ -33,11 +33,11 @@ ethernet _first_ {
 }
 
 battery all {
-        format = "%status %percentage"
+        format = " %status %percentage"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d %H:%M:%S"
 }
 
 load {
@@ -45,13 +45,13 @@ load {
 }
 
 volume master {
-	format = "V: %volume"
-	format_muted = "V: M"
+	format = " %volume"
+	format_muted = ""
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
 }
 
 disk "/" {
-        format = "%avail"
+        format = " %avail"
 }
